# MeshChatX

./: .dockerignore  .gitignore  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING  CONTRIBUTORS  Dockerfile  Dockerfile.arch-builder  Dockerfile.demo  LEGAL.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO.md  Taskfile.yml  cx_setup.py  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  flake.nix  flatpak-build.sh  flatpak.json  forge.config.js  nginx.demo.conf  package-legacy.json  package.json  playwright.config.js  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js  vite.config.js  vitest.config.js  vitest.electron.config.js
.gitea/workflows/: android-build.yml  arch-package.yml  bearer-pr.yml  bench.yml  build-test.yml  build.yml  ci.yml  dependency-review.yml  docker.yml  osv-pr.yml  osv-scheduled.yml  scan.yml  sync-github-release-assets.yml  tests.yml
.github/: dependabot.yml
.github/workflows/: android-build.yml  build-release.yml  build.yml  ci.yml  codeql.yml  security-scan.yml
android/: README.md  build.gradle
android/app/: build.gradle  proguard-rules.pro
docs/: meshchat_on_android_with_termux.md  meshchat_on_raspberry_pi.md  meshchatx.md  meshchatx_linux_sandbox.md  meshchatx_on_raspberry_pi.md  sep_manifest.android.example.json  sep_manifest.example.json  sep_manifest.schema.json  sidecar_extension_protocol_draft.md
electron/: backend-manifest.json  crash.html  loading.html  loadingStatusNotice.js  main-legacy.js  main.js  mainHelpers.js  preload.js
lang/: README.de.md  README.it.md  README.ja.md  README.ru.md  README.zh.md
meshchatx/: __init__.py  meshchat.py
meshchatx/src/: env_utils.py  path_utils.py  ssl_self_signed.py  version.py
misc/: README.md
packaging/arch/: .SRCINFO  PKGBUILD
scripts/: argos_translate.py  build-android-wheels-local.sh  build-backend.js  build-macos-universal.sh  build_community_interfaces_json.py  dev-local.sh  gen_checksums.sh  generate_locale_template.py  move_wheels.py  post_bench_results.sh  post_ci_results.sh  prepare_frontend_dir.py  setup_wine_env.sh  sign-android-apks.sh  sync_version.js  sync_version.py  unify-backend-plain-files.sh
scripts/ci/: attest-release-assets.sh  checkout.sh  ci-node-path.sh  docker-tags.sh  github-build-macos.sh  github-build-windows.sh  github-install-deps.sh  github-install-poetry.sh  github-run-tests.sh  setup-cosign.sh  setup-docker.sh  setup-java.sh  setup-node.sh  setup-pnpm.sh  setup-python.sh  setup-task.sh  setup-trivy.sh  slsa-predicate.py  sync-github-release-assets.sh  verify-release-attestation.sh
scripts/e2e/: start-e2e-stack.sh
scripts/rpi/: install_meshchatx.sh
tests/backend/: api_json_contract_schemas.py  benchmark_db_lite.py  benchmarking_utils.py  conftest.py  http_api_contract_helpers.py  map_benchmarks.py  media_test_assets.py  memory_benchmarks.py  run_comprehensive_benchmarks.py  test_access_attempts_dao.py  test_access_attempts_enforcement.py  test_announce_dao_extended.py  test_announce_dao_trim.py  test_announce_flood_load.py  test_announce_fuzzing.py  test_announce_limits.py  test_announce_manager_extended.py  test_api_json_contracts.py  test_app_endpoints.py  test_app_status_tracking.py  test_archiver_manager_extended.py  test_audio_codec.py  test_auto_announce_schedule.py  test_auto_propagation.py  test_auto_propagation_api.py  test_backend_integrity.py  test_blackhole_logic.py  test_bot_handler_extended.py  test_colour_utils.py  test_community_interfaces.py  test_community_interfaces_directory.py  test_concurrency_stress.py  test_config_manager.py  test_contacts_custom_image.py  test_contacts_dao_boost.py  test_contacts_display_name_semantics.py  test_contacts_export_import.py  test_crash_history.py  (+117 more)
(+331 files in other folders)
