[project]
name = "reticulum-meshchatx"
version = "4.3.1"
description = "A simple mesh network communications app powered by the Reticulum Network Stack"
authors = [
  {name = "Sudo-Ivan"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["reticulum", "meshchat", "lxmf", "rns"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "aiohttp>=3.13.2",
  "lxmf>=0.9.4",
  "lxmfy @ git+https://git.quad4.io/LXMFy/LXMFy.git",
  "psutil>=7.1.3",
  "rns>=1.1.4",
  "websockets>=15.0.1",
  "bcrypt>=5.0.0,<6.0.0",
  "aiohttp-session>=2.12.1,<3.0.0",
  "cryptography>=46.0.5,<47.0.0",
  "pycparser>=3.0",
  "requests>=2.32.5,<3.0.0",
  "audioop-lts>=0.2.2; python_version >= '3.13'",
  "ply>=3.11,<4.0",
  "lxst>=0.4.6",
  "jaraco.context>=6.1.0",
]

[project.scripts]
meshchat = "meshchatx.meshchat:main"

[project.urls]
Homepage = "https://git.quad4.io/RNS-Things/MeshChatX"

[tool.poetry]
packages = [{include = "meshchatx"}]

[tool.poetry.dependencies]
python = ">=3.11"
lxmfy = {git = "https://git.quad4.io/LXMFy/LXMFy.git"}
lxst = ">=0.4.6"

[tool.poetry.group.dev.dependencies]
cx-freeze = ">=7.0.0"
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
hypothesis = ">=6.148.9"

[[tool.poetry.include]]
path = "logo"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
meshchatx = ["public/**/*", "public/*"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [
    ".git",
    ".pnpm-store",
    "node_modules",
    "venv",
    ".venv",
    "tests/frontend",
]
